// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/component/element/a should handle correct link to external page 1`] = `
<a
  className="c-link link-a"
  href="http://www.foo.bar"
  lang="de"
  rel="noopener noreferrer"
  tabIndex="0"
  target="_blank"
  title="Link title"
>
  Link Children
</a>
`;

exports[`common/component/element/a should handle correct link to external page 2`] = `
<a
  className="c-link link-a"
  href="http://foo.bar"
  lang="de"
  rel="noopener noreferrer"
  tabIndex="0"
  target="_blank"
  title="Link title"
>
  Link Children
</a>
`;

exports[`common/component/element/a should handle correct link to external page 3`] = `
<a
  className="c-link link-a"
  href="www.foo.bar"
  lang="de"
  rel="noopener noreferrer"
  tabIndex="0"
  target="_blank"
  title="Link title"
>
  Link Children
</a>
`;

exports[`common/component/element/a should handle correct link to relative page 1`] = `
<a
  aria-current={false}
  className="c-link link-a"
  href="/persona"
  lang="de"
  onClick={[Function]}
  tabIndex="0"
  title="Link title"
>
  Link Children
</a>
`;

exports[`common/component/element/a should render correctly 1`] = `
<a
  className="c-link link-a"
  href="testpage"
  lang="de"
  tabIndex="0"
  title="Link title"
>
  Link Children
</a>
`;
